--- a/cvic01/.cproject
+++ b/cvic01/.cproject
@@ -44,6 +44,7 @@
 									<listOptionValue builtIn="false" value="&quot;D:\Documents\MMIA\cvic01\CMSIS\Device\ST\STM32F0xx\Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:\Documents\MMIA\cvic01\CMSIS\Include&quot;"/>
 								</option>
+								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.warnings.extra.378654055" name="Enable extra warning flags (-Wextra)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.warnings.extra" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1813044074" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.1975239475" name="MCU G++ Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler">
